--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="PLC LogicGather">
     <meta property="og:description" content="PLCLogicGather.">
-    <meta property="og:image" content="https://zalimwersh.github.io/PLCLogicGather_.png">
-    <meta property="og:url" content="https://zalimwersh.github.io/logicgather.html">
+    <meta property="og:image" content="https://zoshytlogic.github.io/PLCLogicGather_.png">
+    <meta property="og:url" content="https://zoshytlogic.github.io/logicgather.html">
 
     <!-- Twitter meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PLC LogicGather">
     <meta name="twitter:description" content="PLC LogicGather.">
-    <meta name="twitter:image" content="https://zalimwersh.github.io/PLCLogicGather_.png">
+    <meta name="twitter:image" content="https://zoshytlogic.github.io/PLCLogicGather_.png">
 <style>
 
 
@@ -80,7 +80,7 @@
 
 <div style="position: relative; width: 100%; height: 100%;">
 
-  <img src="./Zalimwersh Automation._files/logicgatherplc.png" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
+  <img src="logicgatherplc.png" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
   <p class="hhh2">Zalimwersh Automation.</p>
   <p style="position: absolute; bottom: 40%; left: 5%; color: gray; font-size: 40px; text-align: left;">
     LogicGather – a PLC for  <br> process management.
