--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <div style="position: relative; width: 100%; height: 100%;">
 
   <img src="logicgatherplc.png" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
-  <p class="hhh2">Zalimwersh Automation.</p>
+  <p class="hhh2">3osheet Automation.</p>
   <p style="position: absolute; bottom: 40%; left: 5%; color: gray; font-size: 40px; text-align: left;">
     LogicGather – a PLC for  <br> process management.
   </p>
