--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 
 <p class="hhh3"><span style="color:#88aacc">3OSHEET</span> is a lightweight development environment for programming industrial controllers LogicGather, with support for <span style="color:#6699cc"> LD </span> and <span style="color:#6699cc">ST</span> programming languages according to the <span style="color:#6699cc"> IEC 61131-3</span> standard.</p>
-  <p><img src="IDE_Screen.png" style="width:60%;"></p><div style="margin-top:2%;">_</div><video style="width:60%;" controls="" autoplay="" muted="" loop="">
+  <p><img src=""https://zoshytlogic.github.io/IDE_Screen.png" style="width:60%;"></p><div style="margin-top:2%;">_</div><video style="width:60%;" controls="" autoplay="" muted="" loop="">
         <source src="3osheet_ide.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video><div style="margin-top:5%;">_</div><p class="hhh3">Technical specifications of the LogicGather PLC</p><p><img src="PLCLogicGather.png" style="width:50%"></p><div style="margin-top:5%;">_</div><svg width="252.5593mm" height="137.16351mm" viewBox="0 0 252.5593 137.16351" version="1.1" id="svg1" inkscape:version="1.3 (0e150ed6c4, 2023-07-21)" sodipodi:docname="drawing.svg" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
@@ -188,7 +188,7 @@
 
 
 
-<div class="center" style=" position: relative;"><img src="./Zalimwersh Automation._files/conv.jpg" style="width:99%">
+<div class="center" style=" position: relative;"><img src=""https://zoshytlogic.github.io/conv.jpg" style="width:99%">
  
 <p style="position: absolute; top: 72%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 40px; text-align: center;">
 
