--- a/index.html
+++ b/index.html
@@ -99,7 +99,21 @@
 
 
 <p class="hhh3"><span style="color:#88aacc">3OSHEET</span> is a lightweight development environment for programming industrial controllers LogicGather, with support for <span style="color:#6699cc"> LD </span> and <span style="color:#6699cc">ST</span> programming languages according to the <span style="color:#6699cc"> IEC 61131-3</span> standard.</p>
-  <p><img src="3osheetIDE.jpg" style="width:60%;"></p><div style="margin-top:2%;">_</div><video style="width:60%;" controls="" autoplay="" muted="" loop="">
+  <p><img src="3osheetIDE.jpg" style="width:60%;"></p>
+    <p>3osheets IDE is a lightweight, cross-platform development environment built on OpenJDK, capable of running on single-board computers and embedded devices with minimal hardware resources.
+
+It natively supports LD, FBD, and ST programming languages, as well as a low-level virtual machine instruction language for advanced control logic design.
+
+In debug mode, 3osheets allows developers to pause, edit, and rewrite individual tasks in real time, without interrupting the execution of other processes — a powerful feature for live system tuning and rapid development.
+
+The runtime supports two independent multitasking architectures:<br>
+
+<strong>Classic PLC mode</strong> — a deterministic cyclic model (OB, OB100), ensuring compatibility and simplicity.<br>
+
+<strong>RTOS mode</strong> — a true preemptive multitasking kernel based on a 1 ms hardware timer interrupt, enabling full task context saving and restoration for precise real-time performance.
+
+Designed for efficiency, portability, and real-time control, 3osheets bridges traditional PLC logic with modern embedded RTOS flexibility.</p>
+    <div style="margin-top:2%;">_</div><video style="width:60%;" controls="" autoplay="" muted="" loop="">
         <source src="3osheetRes.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video><div style="margin-top:5%;">_</div><p class="hhh3">Technical specifications of the LogicGather PLC</p><p><img src="PLCLogicGather.png" style="width:50%"></p><div style="margin-top:5%;">_</div><svg width="252.5593mm" height="137.16351mm" viewBox="0 0 252.5593 137.16351" version="1.1" id="svg1" inkscape:version="1.3 (0e150ed6c4, 2023-07-21)" sodipodi:docname="drawing.svg" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
