--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <p class="hhh3"><span style="color:#88aacc">3OSHEET</span> is a lightweight development environment for programming industrial controllers LogicGather, with support for <span style="color:#6699cc"> LD </span> and <span style="color:#6699cc">ST</span> programming languages according to the <span style="color:#6699cc"> IEC 61131-3</span> standard.</p>
   <p><img src="3osheetIDE.jpg" style="width:60%;"></p>
-    <p class="hhh4">3osheets IDE is a lightweight, cross-platform development environment built on OpenJDK, capable of running on single-board computers and embedded devices with minimal hardware resources.
+    <p class="hhh4" width="50%">3osheets IDE is a lightweight, cross-platform development environment built on OpenJDK, capable of running on single-board computers and embedded devices with minimal hardware resources.
 
 It natively supports LD, FBD, and ST programming languages, as well as a low-level virtual machine instruction language for advanced control logic design.
 
