--- a/index.html
+++ b/index.html
@@ -100,19 +100,35 @@
 
 <p class="hhh3"><span style="color:#88aacc">3OSHEET</span> is a lightweight development environment for programming industrial controllers LogicGather, with support for <span style="color:#6699cc"> LD </span> and <span style="color:#6699cc">ST</span> programming languages according to the <span style="color:#6699cc"> IEC 61131-3</span> standard.</p>
   <p><img src="3osheetIDE.jpg" style="width:60%;"></p>
-    <p class="hhh4" width="50%">3osheets IDE is a lightweight, cross-platform development environment built on OpenJDK, capable of running on single-board computers and embedded devices with minimal hardware resources.
+  <p class="hhh4" style="max-width: 700px; line-height: 1.6; font-size: 16px;">
+  <strong>3osheets IDE</strong> is a lightweight, cross-platform development environment built on 
+  <strong>OpenJDK</strong>, capable of running on <em>single-board computers</em> and embedded devices 
+  with minimal hardware resources.
+</p>
 
-It natively supports LD, FBD, and ST programming languages, as well as a low-level virtual machine instruction language for advanced control logic design.
+<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
+  It natively supports <strong>LD</strong>, <strong>FBD</strong>, and <strong>ST</strong> programming languages, 
+  as well as a low-level <strong>virtual machine instruction language</strong> for advanced control logic design.
+</p>
 
-In debug mode, 3osheets allows developers to pause, edit, and rewrite individual tasks in real time, without interrupting the execution of other processes — a powerful feature for live system tuning and rapid development.
+<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
+  In <strong>debug mode</strong>, 3osheets allows developers to <em>pause, edit, and rewrite individual tasks in real time</em>, 
+  without interrupting the execution of other processes — a powerful feature for live system tuning and rapid development.
+</p>
 
-The runtime supports two independent multitasking architectures:<br>
+<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
+  The runtime supports two independent multitasking architectures:
+  <br><br>
+  <strong>• Classic PLC mode</strong> — a deterministic cyclic model (<code>OB</code>, <code>OB100</code>), ensuring compatibility and simplicity.<br>
+  <strong>• RTOS mode</strong> — a true preemptive multitasking kernel based on a <strong>1&nbsp;ms hardware timer interrupt</strong>, 
+  enabling full task context saving and restoration for precise real-time performance.
+</p>
 
-<strong>Classic PLC mode</strong> — a deterministic cyclic model (OB, OB100), ensuring compatibility and simplicity.<br>
+<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
+  Designed for <strong>efficiency</strong>, <strong>portability</strong>, and <strong>real-time control</strong>, 
+  3osheets bridges traditional PLC logic with modern embedded RTOS flexibility.
+</p>
 
-<strong>RTOS mode</strong> — a true preemptive multitasking kernel based on a 1 ms hardware timer interrupt, enabling full task context saving and restoration for precise real-time performance.
-
-Designed for efficiency, portability, and real-time control, 3osheets bridges traditional PLC logic with modern embedded RTOS flexibility.</p>
     <div style="margin-top:2%;">_</div><video style="width:60%;" controls="" autoplay="" muted="" loop="">
         <source src="3osheetRes.mp4" type="video/mp4">
         Your browser does not support the video tag.
