--- a/index.html
+++ b/index.html
@@ -99,35 +99,69 @@
 
 
 <p class="hhh3"><span style="color:#88aacc">3OSHEET</span> is a lightweight development environment for programming industrial controllers LogicGather, with support for <span style="color:#6699cc"> LD </span> and <span style="color:#6699cc">ST</span> programming languages according to the <span style="color:#6699cc"> IEC 61131-3</span> standard.</p>
-  <p><img src="3osheetIDE.jpg" style="width:60%;"></p>
-  <p class="hhh4" style="max-width: 700px; line-height: 1.6; font-size: 16px;">
-  <strong>3osheets IDE</strong> is a lightweight, cross-platform development environment built on 
-  <strong>OpenJDK</strong>, capable of running on <em>single-board computers</em> and embedded devices 
-  with minimal hardware resources.
-</p>
 
-<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
-  It natively supports <strong>LD</strong>, <strong>FBD</strong>, and <strong>ST</strong> programming languages, 
-  as well as a low-level <strong>virtual machine instruction language</strong> for advanced control logic design.
-</p>
 
-<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
-  In <strong>debug mode</strong>, 3osheets allows developers to <em>pause, edit, and rewrite individual tasks in real time</em>, 
-  without interrupting the execution of other processes — a powerful feature for live system tuning and rapid development.
-</p>
 
-<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
-  The runtime supports two independent multitasking architectures:
-  <br><br>
-  <strong>• Classic PLC mode</strong> — a deterministic cyclic model (<code>OB</code>, <code>OB100</code>), ensuring compatibility and simplicity.<br>
-  <strong>• RTOS mode</strong> — a true preemptive multitasking kernel based on a <strong>1&nbsp;ms hardware timer interrupt</strong>, 
-  enabling full task context saving and restoration for precise real-time performance.
-</p>
 
-<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
-  Designed for <strong>efficiency</strong>, <strong>portability</strong>, and <strong>real-time control</strong>, 
-  3osheets bridges traditional PLC logic with modern embedded RTOS flexibility.
-</p>
+<table>
+  <tr>
+    <td style="width: 45%; vertical-align: top;">
+      <img src="3osheetIDE.jpg" style="width:100%; border-radius: 8px;">
+    </td>
+    <td style="width: 55%; vertical-align: top; padding-left: 20px;">
+      <p style="line-height: 1.6; font-size: 16px;">
+        <strong>3osheets IDE</strong> is a lightweight, cross-platform development environment built on 
+        <strong>OpenJDK</strong>, capable of running on <em>single-board computers</em> and embedded devices 
+        with minimal hardware resources.
+      </p>
+
+      <p style="line-height: 1.6; font-size: 16px;">
+        It natively supports <strong>LD</strong>, <strong>FBD</strong>, and <strong>ST</strong> programming languages, 
+        as well as a low-level <strong>virtual machine instruction language</strong> for advanced control logic design.
+      </p>
+
+      <p style="line-height: 1.6; font-size: 16px;">
+        In <strong>debug mode</strong>, 3osheets allows developers to <em>pause, edit, and rewrite individual tasks in real time</em>, 
+        without interrupting the execution of other processes — a powerful feature for live system tuning and rapid development.
+      </p>
+
+      <p style="line-height: 1.6; font-size: 16px;">
+        The runtime supports two independent multitasking architectures:<br><br>
+        <strong>• Classic PLC mode</strong> — a deterministic cyclic model (<code>OB</code>, <code>OB100</code>), ensuring compatibility and simplicity.<br>
+        <strong>• RTOS mode</strong> — a true preemptive multitasking kernel based on a <strong>1&nbsp;ms hardware timer interrupt</strong>, 
+        enabling full task context saving and restoration for precise real-time performance.
+      </p>
+
+      <p style="line-height: 1.6; font-size: 16px;">
+        Designed for <strong>efficiency</strong>, <strong>portability</strong>, and <strong>real-time control</strong>, 
+        3osheets bridges traditional PLC logic with modern embedded RTOS flexibility.
+      </p>
+    </td>
+  </tr>
+</table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 
     <div style="margin-top:2%;">_</div><video style="width:60%;" controls="" autoplay="" muted="" loop="">
         <source src="3osheetRes.mp4" type="video/mp4">
