--- a/index.html
+++ b/index.html
@@ -157,6 +157,48 @@
 
 
 
+    <table>
+  <tr>
+    <td style="width: 45%; vertical-align: top;">
+      <img src="3osheetIDE.jpg" style="width:100%; border-radius: 8px;">
+    </td>
+    <td style="width: 55%; vertical-align: top; padding-left: 20px;">
+     <h3 style="margin-top:40px;">3osheet Compiler</h3>
+
+<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
+  <strong>3osheet Compiler</strong> is a standalone application that compiles instruction text into <strong>bytecode</strong>.
+  It features its own programming language, <code>.3osheet</code>, built on a <em>hybrid architecture</em> — 
+  combining <strong>high-level syntax</strong> for arrays and deeply nested structures with 
+  <strong>atomic, assembly-like instructions</strong> compiled into bytecode executed by the virtual machine runtime.
+</p>
+
+<p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
+  The compiler supports a wide range of instructions, including <strong>virtual stack</strong> and <strong>context management</strong> operations,
+  enabling developers to build complex <strong>multitasking programs</strong> with <em>recursive calls</em> 
+  and <em>deep function transitions</em>.
+</p>
+
+    </td>
+  </tr>
+</table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
