--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <table>
   <tr>
     <td style="width: 45%; vertical-align: top;">
-      <img src="3osheetIDE.jpg" style="width:100%; border-radius: 8px;">
+      <img src="3osheetcompile.png" style="width:100%; border-radius: 8px;">
     </td>
     <td style="width: 55%; vertical-align: top; padding-left: 20px;">
      <h3 style="margin-top:40px;">3osheet Compiler</h3>
