--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3osheet Automation.</title>
+    <title>3o|||sheet Automation.</title>
     
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="PLC LogicGather">
@@ -98,7 +98,7 @@
 
 
 
-<p class="hhh3"><span style="color:#88aacc">3OSHEET</span> is a lightweight development environment for programming industrial controllers LogicGather, with support for <span style="color:#6699cc"> LD </span> and <span style="color:#6699cc">ST</span> programming languages according to the <span style="color:#6699cc"> IEC 61131-3</span> standard.</p>
+<p class="hhh3"><span style="color:#88aacc">3O|||SHEET</span> is a lightweight development environment for programming industrial controllers LogicGather, with support for <span style="color:#6699cc"> LD </span> and <span style="color:#6699cc">ST</span> programming languages according to the <span style="color:#6699cc"> IEC 61131-3</span> standard.</p>
 
 
 
@@ -110,7 +110,7 @@
     </td>
     <td style="width: 55%; vertical-align: top; padding-left: 20px;">
       <p style="line-height: 1.6; font-size: 16px;">
-        <strong>3osheets IDE</strong> is a lightweight, cross-platform development environment built on 
+        <strong>3o|||sheets IDE</strong> is a lightweight, cross-platform development environment built on 
         <strong>OpenJDK</strong>, capable of running on <em>single-board computers</em> and embedded devices 
         with minimal hardware resources.
       </p>
@@ -166,7 +166,7 @@
      <h3 style="margin-top:40px;">3osheet Compiler</h3>
 
 <p style="max-width: 700px; line-height: 1.6; font-size: 16px;">
-  <strong>3osheet Compiler</strong> is a standalone application that compiles instruction text into <strong>bytecode</strong>.
+  <strong>3o|||sheet Compiler</strong> is a standalone application that compiles instruction text into <strong>bytecode</strong>.
   It features its own programming language, <code>.3osheet</code>, built on a <em>hybrid architecture</em> — 
   combining <strong>high-level syntax</strong> for arrays and deeply nested structures with 
   <strong>atomic, assembly-like instructions</strong> compiled into bytecode executed by the virtual machine runtime.
