--- a/index.html
+++ b/index.html
@@ -194,6 +194,72 @@
 
 
 
+    <table>
+  <tr>
+    <td style="width: 45%; vertical-align: top;">
+      <img src="3osheetcompile.png" style="width:100%; border-radius: 8px;">
+    </td>
+    <td style="width: 55%; vertical-align: top; padding-left: 20px;">
+     <h3 style="margin-top:40px;">3osheet Compiler</h3>
+
+<section id="runtime" style="max-width:900px; margin: 24px auto; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; color:#222;">
+  <h3 style="margin-bottom: 8px;">Register-based Virtual Machine</h3>
+
+  <p style="line-height:1.6; font-size:16px; margin: 8px 0;">
+    A <strong>register-based virtual machine</strong> that executes programs entirely within a <strong>safe, sandboxed environment</strong>.
+    The <strong>3osheet runtime</strong> can run on devices with as little as <strong>8&nbsp;KB of RAM</strong>, while providing
+    <strong>full control over microcontroller peripherals</strong>.
+  </p>
+
+  <p style="line-height:1.6; font-size:16px; margin: 8px 0;">
+    It contains <strong>no low-level, architecture-dependent code</strong>, which means the runtime can be
+    <strong>ported quickly to any microcontroller platform</strong> when needed.
+  </p>
+
+  <dl style="margin-top:16px; line-height:1.6; font-size:15px;">
+    <dt style="font-weight:600; margin-top:8px;">Highlights</dt>
+    <dd style="margin:4px 0 12px 16px;">
+      • Runs on constrained devices (≈ <em>8 KB RAM</em>)<br>
+      • Safe, sandboxed execution model<br>
+      • Full peripheral control (GPIO, timers, UART, I²C, SPI, etc.)<br>
+      • Architecture-agnostic implementation — easy porting to new MCUs
+    </dd>
+  </dl>
+</section>
+
+
+    </td>
+  </tr>
+</table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
