--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 <table style="width:100%; border-collapse:collapse;">
   <tr>
     <td style="width:45%; vertical-align:top;">
-      <img src="_3osheetRuntime.png" alt="3osheet Runtime Board" style="width:100%; border-radius:8px;">
+      <img src="3osheetRuntime.png" alt="3osheet Runtime Board" style="width:100%; border-radius:8px;">
     </td>
     <td style="width:55%; vertical-align:top; padding-left:20px;">
       
