--- a/index.html
+++ b/index.html
@@ -64,6 +64,53 @@
   font-size: 20px !important;
   color:#333333
 }
+
+
+      .feature {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin: 40px 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+    color: #222;
+  }
+
+  .feature img {
+    width: 45%;
+    border-radius: 10px;
+    flex-shrink: 0;
+  }
+
+  .feature .text {
+    width: 55%;
+    padding-left: 20px;
+  }
+
+  .feature p, .feature ul, .feature dl {
+    line-height: 1.6;
+    font-size: 16px;
+  }
+
+  @media (max-width: 768px) {
+    .feature {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .feature img {
+      width: 90%;
+      margin-bottom: 16px;
+    }
+
+    .feature .text {
+      width: 95%;
+      padding: 0;
+    }
+
+    .feature p, .feature ul {
+      font-size: 15px;
+    }
+  }
   
 </style></head>
 
@@ -103,109 +150,48 @@
 
 
 <!-- 3osheet IDE -->
-<table style="width:100%; border-collapse:collapse;">
-  <tr>
-    <td style="width:45%; vertical-align:top;">
-      <img src="3osheetIDE.jpg" alt="3osheet IDE" style="width:100%; border-radius:8px;">
-    </td>
-    <td style="width:55%; vertical-align:top; padding-left:20px;">
-      <p style="line-height:1.6; font-size:16px;">
-        <strong>3o|||sheets IDE</strong> is a lightweight, cross-platform development environment built on 
-        <strong>OpenJDK</strong>, capable of running on <em>single-board computers</em> and embedded devices 
-        with minimal hardware resources.
-      </p>
-
-      <p style="line-height:1.6; font-size:16px;">
-        It natively supports <strong>LD</strong>, <strong>FBD</strong>, and <strong>ST</strong> programming languages, 
-        as well as a low-level <strong>virtual machine instruction language</strong> for advanced control logic design.
-      </p>
-
-      <p style="line-height:1.6; font-size:16px;">
-        In <strong>debug mode</strong>, 3osheets allows developers to <em>pause, edit, and rewrite individual tasks in real time</em>, 
-        without interrupting the execution of other processes — a powerful feature for live system tuning and rapid development.
-      </p>
-
-      <p style="line-height:1.6; font-size:16px;">
-        The runtime supports two independent multitasking architectures:
-      </p>
-      <ul style="font-size:16px; line-height:1.6; margin-top:4px;">
-        <li><strong>Classic PLC mode</strong> — a deterministic cyclic model (<code>OB</code>, <code>OB100</code>) ensuring compatibility and simplicity.</li>
-        <li><strong>RTOS mode</strong> — a true preemptive multitasking kernel based on a <strong>1 ms hardware timer interrupt</strong>, enabling full task context saving and restoration for precise real-time performance.</li>
-      </ul>
-
-      <p style="line-height:1.6; font-size:16px;">
-        Designed for <strong>efficiency</strong>, <strong>portability</strong>, and <strong>real-time control</strong>, 
-        3osheets bridges traditional PLC logic with modern embedded RTOS flexibility.
-      </p>
-    </td>
-  </tr>
-</table>
-
+<div class="feature">
+  <img src="3osheetIDE.jpg" alt="3osheet IDE">
+  <div class="text">
+    <h3>3o|||sheets IDE</h3>
+    <p><strong>3o|||sheets IDE</strong> — a lightweight, cross-platform development environment built on <strong>OpenJDK</strong>. It runs even on single-board computers with minimal resources.</p>
+    <p>Supports <strong>LD</strong>, <strong>FBD</strong>, and <strong>ST</strong> languages, plus a low-level <strong>virtual machine instruction set</strong> for advanced logic design.</p>
+    <p>In <strong>debug mode</strong>, developers can pause and rewrite individual tasks live — without stopping the system.</p>
+    <ul>
+      <li><strong>Classic PLC mode</strong> — cyclic model (<code>OB</code>, <code>OB100</code>) for compatibility.</li>
+      <li><strong>RTOS mode</strong> — preemptive multitasking via 1 ms timer interrupt, with full task context management.</li>
+    </ul>
+    <p>Combines PLC simplicity with RTOS precision — designed for <strong>efficiency</strong>, <strong>portability</strong>, and <strong>real-time control</strong>.</p>
+  </div>
+</div>
 
 <!-- 3osheet Compiler -->
-<table style="width:100%; border-collapse:collapse; margin-top:40px;">
-  <tr>
-    <td style="width:45%; vertical-align:top;">
-      <img src="3osheetcompile.png" alt="3osheet Compiler" style="width:100%; border-radius:8px;">
-    </td>
-    <td style="width:55%; vertical-align:top; padding-left:20px;">
-      <h3 style="margin-top:0;">3osheet Compiler</h3>
-
-      <p style="max-width:700px; line-height:1.6; font-size:16px;">
-        <strong>3o|||sheet Compiler</strong> is a standalone application that compiles instruction text into <strong>bytecode</strong>.
-        It features its own programming language, <code>.3osheet</code>, built on a <em>hybrid architecture</em> — combining 
-        <strong>high-level syntax</strong> for arrays and deeply nested structures with <strong>atomic, assembly-like instructions</strong> 
-        compiled into bytecode executed by the virtual machine runtime.
-      </p>
-
-      <p style="max-width:700px; line-height:1.6; font-size:16px;">
-        The compiler supports a wide range of instructions, including <strong>virtual stack</strong> and 
-        <strong>context management</strong> operations, enabling developers to build complex 
-        <strong>multitasking programs</strong> with <em>recursive calls</em> and <em>deep function transitions</em>.
-      </p>
-    </td>
-  </tr>
-</table>
-
+<div class="feature">
+  <img src="3osheetcompile.png" alt="3osheet Compiler">
+  <div class="text">
+    <h3>3osheet Compiler</h3>
+    <p>The <strong>3o|||sheet Compiler</strong> is a standalone tool that compiles instruction text into <strong>bytecode</strong>.</p>
+    <p>Its custom <code>.3osheet</code> language combines <strong>high-level syntax</strong> for arrays and structures with <strong>assembly-like atomic instructions</strong> executed by the virtual machine.</p>
+    <p>It supports stack and context operations — allowing complex <strong>multitasking programs</strong> with recursion and deep function transitions.</p>
+  </div>
+</div>
 
 <!-- 3osheet Runtime -->
-<table style="width:100%; border-collapse:collapse; margin-top:40px;">
-  <tr>
-    <td style="width:45%; vertical-align:top;">
-      <img src="3osheetRuntime.png" alt="3osheet Runtime Board" style="width:100%; border-radius:8px;">
-    </td>
-    <td style="width:55%; vertical-align:top; padding-left:20px;">
-      <h3 style="margin-top:0;">3osheet Runtime</h3>
-
-      <section id="runtime" style="max-width:900px; font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial; color:#222;">
-        <h4 style="margin-top:0; margin-bottom:8px;">Register-based Virtual Machine</h4>
-
-        <p style="line-height:1.6; font-size:16px;">
-          A <strong>register-based virtual machine</strong> that executes programs entirely within a 
-          <strong>safe, sandboxed environment</strong>. The <strong>3osheet runtime</strong> can run on devices 
-          with as little as <strong>8 KB of RAM</strong>, while providing <strong>full control over microcontroller peripherals</strong>.
-        </p>
-
-        <p style="line-height:1.6; font-size:16px;">
-          It contains <strong>no low-level, architecture-dependent code</strong>, which means the runtime 
-          can be <strong>ported quickly to any microcontroller platform</strong> when needed.
-        </p>
-
-        <dl style="margin-top:16px; line-height:1.6; font-size:15px;">
-          <dt style="font-weight:600; margin-top:8px;">Highlights</dt>
-          <dd style="margin:4px 0 12px 16px;">
-            • Runs on constrained devices (≈ <em>8 KB RAM</em>)<br>
-            • Safe, sandboxed execution model<br>
-            • Full peripheral control (GPIO, timers, UART, I²C, SPI, etc.)<br>
-            • Architecture-agnostic implementation — easy porting to new MCUs
-          </dd>
-        </dl>
-      </section>
-    </td>
-  </tr>
-</table>
-
-
+<div class="feature">
+  <img src="3osheetRuntime.png" alt="3osheet Runtime Board">
+  <div class="text">
+    <h3>3osheet Runtime</h3>
+    <h4>Register-based Virtual Machine</h4>
+    <p>A <strong>register-based virtual machine</strong> executing code in a <strong>safe sandboxed environment</strong>. Runs on devices with only <strong>8 KB RAM</strong> and provides full peripheral access.</p>
+    <p>No hardware-specific code — easily portable to any microcontroller.</p>
+    <ul>
+      <li>Works on low-memory devices (~8 KB RAM)</li>
+      <li>Safe sandboxed execution</li>
+      <li>Controls GPIO, timers, UART, I²C, SPI, etc.</li>
+      <li>Architecture-independent implementation</li>
+    </ul>
+  </div>
+</div>
 
 
 
