--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
 <p class="hhh3"><span style="color:#88aacc">3O|||SHEET</span> is a lightweight development environment for programming industrial controllers LogicGather, with support for <span style="color:#6699cc"> LD </span> and <span style="color:#6699cc">ST</span> programming languages according to the <span style="color:#6699cc"> IEC 61131-3</span> standard.</p>
 
 
+<table>
 
+<tr> <td></td>
+
+
+    <td>
 <!-- 3osheet IDE -->
 <div class="feature">
   <img src="3osheetIDE.jpg" alt="3osheet IDE">
@@ -165,6 +170,14 @@
   </div>
 </div>
 
+        </td>
+    <td></td>
+</tr>
+
+    <tr>
+        <td></td>
+
+        <td>
 <!-- 3osheet Compiler -->
 <div class="feature">
   <img src="3osheetcompile.png" alt="3osheet Compiler">
@@ -175,7 +188,12 @@
     <p>It supports stack and context operations — allowing complex <strong>multitasking programs</strong> with recursion and deep function transitions.</p>
   </div>
 </div>
+</td>
+        <td></td>
+        </tr>
+<tr> <td></td>
 
+    <td>
 <!-- 3osheet Runtime -->
 <div class="feature">
   <img src="3osheetRuntime.png" alt="3osheet Runtime Board">
@@ -193,10 +211,11 @@
   </div>
 </div>
 
+</td>
+    <td></td>
 
-
-
-
+</tr>
+</table>
 
 
     
