--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <img src="3osheetIDE.jpg" alt="3osheet IDE">
           <div class="text">
             <h3>3o|||sheets IDE</h3>
-            <p><strong>3o|||sheets IDE</strong> — a lightweight, cross-platform IDE built on <strong>OpenJDK</strong>. Runs even on single-board computers with minimal resources.</p>
+            A lightweight, cross-platform IDE built on <strong>OpenJDK</strong>. Runs even on single-board computers with minimal resources.</p>
             <p>Supports <strong>LD</strong>, <strong>FBD</strong>, and <strong>ST</strong> languages plus a <strong>virtual machine instruction set</strong> for advanced logic design.</p>
             <p>In <strong>debug mode</strong>, developers can pause and rewrite individual tasks live — without stopping the system.</p>
             <ul>
