--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ _
 
 
 
-  <p style="width:100%;height:100px; background-color:#777777; color:#00FFFF">zalimwersh@gmail.com</p>
+  <p style="width:100%;height:100px; background-color:#777777; color:#00FFFF">zoshytlogic@gmail.com</p>
 </td>
 <td></td>
 
