--- a/index.html
+++ b/index.html
@@ -150,10 +150,7 @@
 
   
 
-  <div style="margin-top:2%;">_</div><video style="width:50%;" controls="" autoplay="" muted="" loop="">
-        <source src="3osheetRes.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+  <div style="margin-top:2%;">_</div>
 
 
 
@@ -163,6 +160,17 @@
 
 <div class="main-container">
   <table class="project">
+          <tr>
+      <td>
+        <!-- 3osheet IDE -->
+        <div class="feature">
+          <video style="width:50%;" controls="" autoplay="" muted="" loop="">
+        <source src="3osheetRes.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+        </video>
+        </div>
+      </td>
+    </tr>
     <tr>
       <td>
         <!-- 3osheet IDE -->
