--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
         <div class="feature">
           <img src="3osheetcompile.png" alt="3osheet Compiler">
           <div class="text">
-            <h3>3osheet Compiler</h3>
-            <p>The <strong>3o|||sheet Compiler</strong> compiles instruction text into <strong>bytecode</strong>.</p>
+            <h3>3o|||sheet Compilerr</h3>
+            <p>The compiles instruction text into <strong>bytecode</strong>.</p>
             <p>Its <code>.3osheet</code> language blends <strong>high-level syntax</strong> with <strong>atomic assembly-like instructions</strong> executed by the VM runtime.</p>
             <p>Supports <strong>virtual stack</strong> and <strong>context management</strong> — ideal for recursive multitasking programs.</p>
           </div>
@@ -211,7 +211,7 @@
         <div class="feature">
           <img src="3osheetRuntime.png" alt="3osheet Runtime">
           <div class="text">
-            <h3>3osheet Runtime</h3>
+            <h3>3o|||sheet Runtime</h3>
             <h4>Register-based Virtual Machine</h4>
             <p>A <strong>register-based virtual machine</strong> running safely in a sandbox. Works on devices with only <strong>8 KB RAM</strong> and full peripheral access.</p>
             <p>No architecture-specific code — portable to any MCU.</p>
