--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="feature">
           <img src="3osheetcompile.png" alt="3osheet Compiler">
           <div class="text">
-            <h3>3o|||sheet Compilerr</h3>
+            <h3>3o|||sheet Compiler</h3>
             <p>The compiles instruction text into <strong>bytecode</strong>.</p>
             <p>Its <code>.3osheet</code> language blends <strong>high-level syntax</strong> with <strong>atomic assembly-like instructions</strong> executed by the VM runtime.</p>
             <p>Supports <strong>virtual stack</strong> and <strong>context management</strong> — ideal for recursive multitasking programs.</p>
