--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@ footer {
             </thead>
             <tbody>
                 <tr>
-                    <td>CH32V307</td>
+                    <td>CH32V307(3o|||sheet Runtime)</td>
                     <td>1 μs</td>
                     <td>2.5 μs</td>
                 </tr>
                 <tr>
-                    <td>STM32F407</td>
+                    <td>STM32F407(3o|||sheet Runtime)</td>
                     <td>0.8 μs</td>
                     <td>2 μs</td>
                 </tr>
