--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@ footer {
                     <td>2 μs</td>
                 </tr>
                 <tr>
-                    <td>Rockwell Logix 5000</td>
-                    <td>~0.8–1 ms</td>
-                    <td>~2–3 ms</td>
+                    <td>Rockwell Compact GuardLogix 5380</td>
+                    <td>~0.01–0.05  μs</td>
+                    <td>~~0.01–0.08  μs</td>
                 </tr>
                 <tr>
                     <td>Siemens S7-1200</td>
