--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ footer {
     </div>
 
     <div class="table-container">
-        <h2>LD Instruction Processing Speed Test</h2>
+        <h2>LD Instruction Execution Times</h2>
         <p>Measured execution times for boolean and floating-point operations on different microcontrollers and PLCs.</p>
         <table id="speed-test">
             <thead>
