--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@ footer {
                     <td>2 μs</td>
                 </tr>
                 <tr>
+                    <td>STM32H743(3o|||sheet Runtime)</td>
+                    <td>0.09 μs</td>
+                    <td>0.05 μs</td>
+                </tr>
+                
+                <tr>
                     <td>Rockwell Compact GuardLogix 5380</td>
                     <td>~0.01–0.05  μs</td>
                     <td>~~0.01–0.08  μs</td>
