--- a/index.html
+++ b/index.html
@@ -175,23 +175,23 @@ footer {
             </thead>
             <tbody>
                 <tr>
-                    <td>CH32V307(3o|||sheet Runtime)</td>
+                    <td>CH32V307 144Mhz(3o|||sheet Runtime)</td>
                     <td>1 μs</td>
                     <td>2.5 μs</td>
                 </tr>
                 <tr>
-                    <td>STM32F407(3o|||sheet Runtime)</td>
+                    <td>STM32F407 168Mhz(3o|||sheet Runtime)</td>
                     <td>0.8 μs</td>
                     <td>2 μs</td>
                 </tr>
                 <tr>
-                    <td>STM32H743(3o|||sheet Runtime)</td>
+                    <td>STM32H743 480Mhz(3o|||sheet Runtime)</td>
                     <td>0.2 μs</td>
                     <td>0.5 μs</td>
                 </tr>
                 
                 <tr>
-                    <td>Rockwell Compact GuardLogix 5380</td>
+                    <td>Rockwell Compact GuardLogix 5380 1Ghz</td>
                     <td>~0.01–0.05  μs</td>
                     <td>~~0.01–0.08  μs</td>
                 </tr>
