--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ footer {
                     <td>2 μs</td>
                 </tr>
                 <tr>
-                    <td>STM32H743 480Mhz(3o|||sheet Runtime)</td>
+                    <td>STM32H743 480Mhz(<span color="blue"></span>3o|||sheet Runtime</span>)</td>
                     <td>0.2 μs</td>
                     <td>0.5 μs</td>
                 </tr>
