--- a/index.html
+++ b/index.html
@@ -191,17 +191,17 @@ footer {
             </thead>
             <tbody>
                 <tr>
-                    <td>CH32V307 144Mhz((<span color="blue"></span>3o|||sheet Runtime</span>)</td>
+                    <td>CH32V307 144Mhz(<spanstyle="color: blue;"></span>3o|||sheet Runtime</span>)</td>
                     <td>1 μs</td>
                     <td>2.5 μs</td>
                 </tr>
                 <tr>
-                    <td>STM32F407 168Mhz((<span color="blue"></span>3o|||sheet Runtime</span>)</td>
+                    <td>STM32F407 168Mhz(<span style="color: blue;"></span>3o|||sheet Runtime</span>)</td>
                     <td>0.8 μs</td>
                     <td>2 μs</td>
                 </tr>
                 <tr>
-                    <td>STM32H743 480Mhz(<span color="blue"></span>3o|||sheet Runtime</span>)</td>
+                    <td>STM32H743 480Mhz(<span style="color: blue;">3o|||sheet Runtime</span>)</td>
                     <td>0.2 μs</td>
                     <td>0.5 μs</td>
                 </tr>
