--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@ footer {
     <div class="feature">
         
         <h2>3o|||sheet Compiler</h2>
-        <p>Compiles instruction text into <strong>bytecode</strong> executed by the VM runtime.</p>
-        <p>Supports <strong>virtual stack</strong> and <strong>context management</strong> — ideal for recursive multitasking programs.</p>
+        <p>Is a standalone application that compiles text programs written in <strong>LD</strong>,  <strong>FBD</strong>,  <strong>ST</strong> abd  <strong>.3osheet</strong>  into executable bytecode for a virtual machine.</p>
+        <p>The compiler can be integrated into third-party development tools (for example, <strong>>Visual Studio</strong, etc.).</p>
+        <p>It includes a complete set of tools for working with complex custom variables, <strong>virtual stack</strong>, and <strong>context management</strong>, 
+            enabling the development of sophisticated recursive algorithms and multithreaded tasks  <strong>(coroutines)</strong>.
         <img src="3osheetcompile.png" alt="3o|||sheet Compiler">
     </div>
 
